--- a/app/src/main/res/layout/il_main.xml
+++ b/app/src/main/res/layout/il_main.xml
@@ -2,22 +2,22 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".MainActivity">
+                >
 
     <!-- 界面分为三部分，标题：3钟变化；底部导航：2种变化 -->
 
     <include
         android:id="@+id/ii_title"
         layout="@layout/il_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"/>
 
     <include
         android:id="@+id/ii_bottom"
         layout="@layout/il_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"/>
 
     <RelativeLayout
