--- a/app/src/main/res/layout/il_playssq.xml
+++ b/app/src/main/res/layout/il_playssq.xml
@@ -52,7 +52,7 @@
             <!-- 红球选号的容器 -->
             <!-- 高度固定：留出一个空行——小屏幕手机 -->
 
-            <GridView
+            <com.hong.rise.lottery.view.custom.MyGridView
                 android:id="@+id/ii_ssq_red_number_container"
                 
                 android:layout_width="fill_parent"
@@ -68,7 +68,7 @@
                 
                 android:columnWidth="48dip"
                 >
-            </GridView>
+            </com.hong.rise.lottery.view.custom.MyGridView>
 
             <!-- 蓝球的选号 -->
             
