--- a/studyandroid/src/main/res/layout/activity_studyactivity.xml
+++ b/studyandroid/src/main/res/layout/activity_studyactivity.xml
@@ -14,6 +14,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="startSystemApp"
-        android:text="隐士意图" />
+        android:text="隐式意图" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="lifeCycle"
+        android:text="生命周期" />
 
 </LinearLayout>
