--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,12 @@
             android:onClick="lotteryDemo"
             android:text="手机彩票" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="setVpn"
+            android:text="VPN"/>
+
 
     </LinearLayout>
 
