--- a/studyandroid/src/main/res/layout/activity_main.xml
+++ b/studyandroid/src/main/res/layout/activity_main.xml
@@ -57,4 +57,10 @@
         android:onClick="mockLoginByVolley"
         android:text="mockLoginByVolley" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="testPreference"
+        android:text="testPreference" />
+
 </LinearLayout>
