音频可视化demo，但是横竖屏切换有bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,12 @@
             android:onClick="baseRecorder"
             android:text="baseRecorder" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="visualizerDemo"
+            android:text="visualizerDemo" />
+
 
     </LinearLayout>
 
