--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -108,6 +108,12 @@
             android:onClick="perfectWave"
             android:text="PerfectWaveDemo"/>
 
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="getVolumeDemo"
+            android:text="getVolumeDemo"/>
     </LinearLayout>
 
 
