--- a/testAndroid/src/main/res/layout/activity_meminfo_test.xml
+++ b/testAndroid/src/main/res/layout/activity_meminfo_test.xml
@@ -52,4 +52,40 @@
             android:text="监听键盘"
             />-->
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Tip:"
+        android:textSize="25sp"
+        android:textColor="#ff0000"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text=" adb shell getprop|grep heapgrowthlimit"
+        android:textSize="15sp"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="256M"
+        android:textSize="10sp"
+        android:textColor="#ff0000"
+        android:layout_height="wrap_content"/>
+
+
+    <!--<TextView
+        android:layout_width="wrap_content"
+        android:text="adb shell getprop|grep dalvik.vm.heapsize"
+        android:textSize="15sp"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="512M"
+        android:textSize="10sp"
+        android:textColor="#ff0000"
+        android:layout_height="wrap_content"/>-->
+
+
 </LinearLayout>
