--- a/testAndroid/src/main/res/layout/activity_memory_leak_demo.xml
+++ b/testAndroid/src/main/res/layout/activity_memory_leak_demo.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#c0c0c0"
-
-    tools:context="com.hong.testmeminfodemo.MemoryLeakDemoActivity">
+    android:background="#c0c0c0">
 
     <LinearLayout
         android:layout_width="match_parent"
