--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="convert"
-            android:text="wav -> mp3"/>
+            android:onClick="mp3Recorder"
+            android:text="mp3Recorder"/>
 
         <Button
             android:layout_width="wrap_content"
