--- a/app/src/main/res/layout/activity_mp3_recorder.xml
+++ b/app/src/main/res/layout/activity_mp3_recorder.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.hong.rise.view.VolumeWaveView
+    <com.hong.rise.view.VoiceLineView
         android:id="@+id/mp3_recorder_volume_wave"
         android:layout_width="match_parent"
         android:layout_height="300dp"
